src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Associated_Program__c</fullName>
        <label>Associated Program</label>
        <picklist>
            <picklistValues>
                <fullName>ARAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign for Conservation (C4C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pride &amp; Fellows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Concept Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Intent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Country__c</fullName>
        <label>Program Country</label>
        <picklist>
            <controllingField>Associated_Program__c</controllingField>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity to which this proposal is submitted.</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>